Fix navigation bar issues on smaller screens

--- a/client/src/components/User/LoginSignUp.css
+++ b/client/src/components/User/LoginSignUp.css
@@ -169,6 +169,7 @@
         background-color: white;
     }
     .login-signup-box {
+        margin-top: 180px;
         width: 100vw;
         height: 95vh;
     }
