--- a/client/src/components/layout/Navbar/Navbar.css
+++ b/client/src/components/layout/Navbar/Navbar.css
@@ -65,14 +65,14 @@
 
 @media screen and (max-width: 960px) {
     .navbar-items {
-        position: relative;
+        position: fixed;
     }
 
     .nav-menu {
         display: flex;
         flex-direction: column;
         width: 100%;
-        position: absolute;
+        position: fixed;
         top: 80px;
         left: -100%;
         opacity: 1;
